# images_and_words

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-PARITY.md  LICENSE-POLYFORM.md  NOTICE  README.md  webdriver.json
.cargo/: config.toml
.github/workflows/: ci.yaml  deploy.yaml
benches/: frame_texture_dequeue.rs  raf_only.rs
demo_site/: index.html  vercel.json
demo_site/animated_scene/: index.html
demo_site/simple_scene/: index.html
examples/: animated_scene.rs  simple_scene.rs
scripts/: bench
scripts/native/: bench  tests
scripts/wasm32/: bench  tests
src/: bindings.rs  bittricks.rs  entry_point.rs  exfiltrate_commands.rs  images.rs  imp.rs  lib.rs  multibuffer.rs  pixel_formats.rs  send_phantom.rs  stable_address_vec.rs  sys.rs
src/bindings/: bind_style.rs  buffer_access.rs  buffer_types.rs  coordinates.rs  dirty_tracking.rs  forward.rs  resource_tracking.rs  sampler.rs  software.rs  texture_builder.rs  visible_to.rs
src/bindings/forward/: dynamic.rs  static.rs
src/bindings/forward/dynamic/: buffer.rs  frame_texture.rs
src/bindings/forward/static/: buffer.rs  texture.rs
src/bindings/software/: texture.rs
src/bindings/software/texture/: scaled_32.rs  scaled_iterator.rs  scaled_row_cell.rs  vnoise.rs  vtexture.rs
src/images/: camera.rs  device.rs  engine.rs  frame.rs  frame_pacing.rs  index_algorithms.rs  port.rs  projection.rs  render_pass.rs  request_animation_frame.rs  shader.rs  surface.rs  vertex_algorithms.rs  vertex_layout.rs  view.rs
src/imp/: nop.rs  wgpu.rs
src/imp/wgpu/: bound_device.rs  buffer.rs  cell.rs  context.rs  engine.rs  entry_point.rs  error.rs  pixel_format.rs  port.rs  sampler.rs  texture.rs  unbound_device.rs  view.rs
src/imp/wgpu/port/: debug_capture.rs  guards.rs  internal.rs  prepared_pass.rs  types.rs
src/pixel_formats/: png_support.rs
tests/: buffer_access_hang.rs  buffer_performance.rs  buffer_performance_regression.rs  sendable_futures.rs  texture_alignment.rs  wgpu_cell_threading_error.rs
