[package]
name = "images_and_words"
version = "0.1.0"
edition = "2024"
authors = ["Drew Crawford <drew@sealedabstract.com>"]
description = "GPU middleware and abstraction layer for high-performance graphics applications and games"
repository = "https://github.com/drewcrawford/images_and_words"
homepage = "https://sealedabstract.com/code/images_and_words"
license = "Parity-7.0.0 OR PolyForm-Noncommercial-1.0.0"
keywords = ["gpu", "middleware", "graphics", "rendering","wgpu"]
categories = ["game-development","graphics","rendering::engine","rust-patterns"]
exclude = [".*"]
rust-version = "1.85.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "~2"
png = "~0"
tgar = "~1"
some_executor = "0.5.1"
vectormatrix = "0.1"
vec_parallel = {version = "0.1.0", features = ["some_executor"]}
async_file = "0.1.0"
test_executors = "0.3"
raw-window-handle = "0.6"
continue = {version = "0.1"}
half = "2.6"
portable_async_sleep = "0.1.0"
await_values = "0.1.0"
# optional
app_window = {version = "0.2", optional=true}
# used for app_window
send_cells = {version = "0.1"}
# used for wgpu backend
wgpu = {version = "25", optional = true}
logwise = "0.2.4"

[target.'cfg(target_arch="wasm32")'.dependencies]
web-time = "1.1.0"
wasm-bindgen-test = "0.3"
web-sys = {version = "0.3", features=[
    "Performance"
]}

[dev-dependencies]
futures = "0.3"


env_logger = {version = "0.11.8"}

[target.'cfg(target_arch="wasm32")'.dev-dependencies]
wasm_thread = "0.3"
web-time = "1.1"

[features]
default = ["backend_wgpu"]
backend_wgpu = ["dep:wgpu"]
app_window = ["dep:app_window"]

[[test]]
name = "buffer_performance"
path = "tests/buffer_performance.rs"

[[test]]
name = "sendable_futures"
path = "tests/sendable_futures.rs"

[[test]]
name = "texture_alignment"
path = "tests/texture_alignment.rs"

[[test]]
name = "wgpu_cell_threading_error"
path = "tests/wgpu_cell_threading_error.rs"

[[finsihed ]]
name = "simple_scene"
path = "examples/simple_scene.rs"
required-features = ["app_window", "backend_wgpu"]

[[example]]
name = "animated_scene"
path = "examples/animated_scene.rs"
required-features = ["app_window", "backend_wgpu"]

[patch.crates-io]
#vec_parallel = {path = "../vec_parallel"}
app_window = {path = "../app_window"}
send_cells = {path = "../send_cells"}
some_executor = {path = "../some_executor"}
# for debugging
wgpu = {path = "../wgpu/wgpu"}
portable_async_sleep = {path = "../portable_async_sleep"}
vectormatrix = {path = "../vectormatrix"}
continue = {path = "../continue"}
logwise = {path = "../logwise"}
test_executors = {path = "../test_executors"}