[package]
name = "images_and_words"
version = "0.1.0"
edition = "2024"
authors = ["Drew Crawford <drew@sealedabstract.com>"]
description = "GPU middleware and abstraction layer for high-performance graphics applications and games"
repository = "https://github.com/drewcrawford/images_and_words"
homepage = "https://sealedabstract.com/code/images_and_words"
license = "Parity-7.0.0 OR PolyForm-Noncommercial-1.0.0"
keywords = ["gpu", "middleware", "graphics", "rendering","wgpu"]
categories = ["game-development","graphics","rendering::engine","rust-patterns"]
exclude = [".*"]
rust-version = "1.88.0"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "~2.0.16"
png = "0.18.0"
tgar = "1.0.0"
some_executor = "0.6.1"
vectormatrix = "0.1.2"
vec_parallel = {version = "0.1.3", features = ["some_executor"]}
async_file = "0.1.1"
test_executors = "0.3.5"
raw-window-handle = "0.6.2"
continue = {version = "0.1.1"}
half = "2.6.0"
portable_async_sleep = "0.1.1"
await_values = "0.1.0"
# optional
app_window = {version = "0.3.0", optional=true}
# used for app_window
send_cells = {version = "0.2.0"}
# used for wgpu backend
wgpu = {version = "26.0.1", optional = true}
logwise = "0.3.0"

[target.'cfg(target_arch="wasm32")'.dependencies]
web-time = "1.1.0"
wasm-bindgen-test = "0.3.51"
web-sys = {version = "0.3.77", features=[
    "Performance"
]}

[dev-dependencies]
futures = "0.3.31"
console_error_panic_hook = "0.1.7"

[target.'cfg(target_arch="wasm32")'.dev-dependencies]
wasm_thread = "0.3.3"
web-time = "1.1.0"

[features]
default = ["backend_wgpu"]
backend_wgpu = ["dep:wgpu"]
app_window = ["dep:app_window"]
logwise_internal = []
# for WebGL fallback
webgl = ["wgpu/webgl"]

[[test]]
name = "buffer_performance"
path = "tests/buffer_performance.rs"

[[test]]
name = "sendable_futures"
path = "tests/sendable_futures.rs"

[[test]]
name = "texture_alignment"
path = "tests/texture_alignment.rs"

[[test]]
name = "wgpu_cell_threading_error"
path = "tests/wgpu_cell_threading_error.rs"

[[example]]
name = "simple_scene"
path = "examples/simple_scene.rs"
required-features = ["app_window", "backend_wgpu"]

[[example]]
name = "animated_scene"
path = "examples/animated_scene.rs"
required-features = ["app_window", "backend_wgpu"]

[profile.release]

[profile.wasm_release]
# these settings improve wasm builds
inherits = "release"
strip = true
opt-level = "s"
lto = true
codegen-units = 1

[patch.crates-io]
#vec_parallel = {path = "../vec_parallel"}
#portable_async_sleep = {path = "../portable_async_sleep"}
#vectormatrix = {path = "../vectormatrix"}
#continue = {path = "../continue"}
#logwise = {path = "../logwise"}
#test_executors = {path = "../test_executors"}
#some_executor = {path = "../some_executor"}