[package]
name = "images_and_words"
version = "0.2.0"
edition = "2024"
authors = ["Drew Crawford <drew@sealedabstract.com>"]
description = "GPU middleware and abstraction layer for high-performance graphics applications and games"
repository = "https://github.com/drewcrawford/images_and_words"
homepage = "https://sealedabstract.com/code/images_and_words"
license = "Parity-7.0.0 OR PolyForm-Noncommercial-1.0.0"
keywords = ["gpu", "middleware", "graphics", "rendering","wgpu"]
categories = ["game-development","graphics","rendering::engine","rendering::graphics-api"]
exclude = [".*"]
rust-version = "1.88.0"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "~2.0.16"
png = "0.18.0"
some_executor = "0.6.1"
vectormatrix = "0.1.2"
vec_parallel = {version = "0.1.3", features = ["some_executor"]}
async_file = "0.1.1"
test_executors = "0.4.1"
raw-window-handle = "0.6.2"
continue = {version = "0.1.2"}
half = "2.6.0"
portable_async_sleep = "0.1.1"
await_values = "0.2.0"
# optional
app_window = {version = "0.3.2", optional=true}
# used for app_window
send_cells = {version = "0.2.1"}
# used for wgpu backend
wgpu = {version = "27.0.1", optional = true}
logwise = "0.5.0"
exfiltrate = {version = "0.2.0", optional = true,features=["logwise"]}
wasm_safe_mutex = "0.1.0"

[target.'cfg(target_arch="wasm32")'.dependencies]
web-time = "1.1.0"
wasm-bindgen-test = "0.3.56"
web-sys = {version = "0.3.77", features=[
    "Performance"
]}

[dev-dependencies]
futures = "0.3.31"
console_error_panic_hook = "0.1.7"

[target.'cfg(not(target_arch="wasm32"))'.dev-dependencies]
criterion = { version = "0.8.0", features=["async"] }


[target.'cfg(target_arch="wasm32")'.dev-dependencies]
wasm_thread = "0.3.3"
web-time = "1.1.0"

[features]
default = ["backend_wgpu"]
backend_wgpu = ["dep:wgpu"]
app_window = ["dep:app_window"]
logwise_internal = []
# Enables WebGL backend for wgpu backend
# See documentation for more details
wgpu_webgl = ["wgpu/webgl"]
# Enables exfiltrate debugging support
exfiltrate = ["dep:exfiltrate"]

[[test]]
name = "buffer_performance"
path = "tests/buffer_performance.rs"

[[test]]
name = "sendable_futures"
path = "tests/sendable_futures.rs"

[[test]]
name = "texture_alignment"
path = "tests/texture_alignment.rs"

[[test]]
name = "wgpu_cell_threading_error"
path = "tests/wgpu_cell_threading_error.rs"

[[example]]
name = "simple_scene"
path = "examples/simple_scene.rs"
required-features = ["app_window", "backend_wgpu"]

[[example]]
name = "animated_scene"
path = "examples/animated_scene.rs"
required-features = ["app_window", "backend_wgpu"]

[[bench]]
name = "frame_texture_dequeue"
path = "benches/frame_texture_dequeue.rs"
required-features = ["backend_wgpu"]
harness = false # criterion requires its own harness

[profile.release]

[profile.wasm_release]
# these settings improve wasm builds
inherits = "release"
strip = true
opt-level = "s"
lto = true
codegen-units = 1
